[package]
name = "lora"
version = "0.1.0"
edition = "2024"

[dependencies]
wave_stream = { version = "0.5.0", optional = true }

[features]
default = ["desktop"]

std = []
alloc = []

desktop = ["std", "alloc", "dep:wave_stream"]
embedded = []

# platforms
nih_plug = ["desktop"]
max_msp = ["desktop"]
supercollider = ["desktop"]
daisy = ["embedded"]
